// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLoaderAnimation test suit renders the default componenent 1`] = `
"<div class=\\"
      fixed
      inset-0
      z-0
      bg-transparent
      flex flex-col
      justify-center
      items-center
    \\" style=\\"\\"><span><div> TESTE </div></span><span class=\\"w-3 h-3 rounded-full bg-primary\\" style=\\"transform: translateX(-49.999999999999986px) scaleX(1) ;\\"></span></div>"
`;

exports[`PageLoaderAnimation test suit should animation must be undefined if slot is not passed 1`] = `
"<div class=\\"
      fixed
      inset-0
      z-0
      bg-transparent
      flex flex-col
      justify-center
      items-center
    \\" style=\\"display: none;\\"><span></span><span class=\\"w-3 h-3 rounded-full bg-primary\\"></span></div>"
`;
